--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
+/* APP */
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: lightcoral;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
-.App-link {
-  color: #61dafb;
+.App-article {
+  margin: auto;
+  justify-content: center;
+  justify-items: center;
+  width: 50vw;
+  font-size: calc(5px + 2vmin);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#cvtBtn {
+  margin: 10px;
+  background-color: #EA4C89;
+  border-radius: 8px;
+  border-style: none;
+  color: black;
+  cursor: pointer;
+  font-size: 14px;
+  height: 40px;
+  outline: none;
+  padding: 10px 16px;
+  text-decoration: none;
+  transition: color 100ms;
+}
+#cvtBtn:active {
+  background-color: #F082AC;
+}
+
+/* ADVANCED DROPDOWN */
+
+#youtubeUrl {
+  min-width: 100%;
+}
+
+#advBtn {
+  border-style: none;
+  background-color: white;
+  width: 50%;
+  font-size: medium;
+}
+
+/* VIDEO DATA */
+
+#videoData {
+  overflow: auto;
 }
