--- a/src/App.css
+++ b/src/App.css
@@ -53,8 +53,23 @@
   font-size: medium;
 }
 
+.vidAudBtn {
+  border: none;
+  border-bottom: 2px solid black;
+  background-color: white;
+  width: 25%;
+  padding: 5px;
+}
+.vidAudBtnActive {
+  background-color: lightgray;
+}
+
 /* VIDEO DATA */
 
 #videoData, #audioData {
   overflow: auto;
+}
+
+.hideVidAudData {
+  display: none;
 }
